# proyecto_ocr

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: inferencia.py  ocr_pipeline.py  utils.py
